--- a/mp3.fxml
+++ b/mp3.fxml
@@ -12,18 +12,18 @@
   <items>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="102.0" prefWidth="598.0">
       <children>
-        <Rectangle arcHeight="0.0" arcWidth="43.0" fill="#ccfff9" height="38.0" layoutX="0.0" layoutY="0.0" strokeType="INSIDE" width="122.226318359375">
+        <Rectangle arcHeight="0.0" arcWidth="43.0" fill="#ccfff9" height="57.0" layoutX="0.0" layoutY="0.0" strokeType="INSIDE" width="217.197265625">
           <stroke>
             <Color blue="0.600" green="0.239" red="0.000" fx:id="x1" />
           </stroke>
         </Rectangle>
-        <Rectangle arcHeight="0.0" arcWidth="43.0" height="38.0" layoutX="122.0" layoutY="0.0" stroke="$x1" strokeType="INSIDE" strokeWidth="0.8" width="122.226318359375">
+        <Rectangle arcHeight="0.0" arcWidth="43.0" height="57.0" layoutX="216.0" layoutY="0.0" stroke="$x1" strokeType="INSIDE" strokeWidth="0.8" width="217.197265625">
           <fill>
             <Color blue="0.976" green="1.000" red="0.800" fx:id="x2" />
           </fill>
         </Rectangle>
-        <Rectangle arcHeight="0.0" arcWidth="43.0" fill="$x2" height="38.00000762939453" layoutX="244.0" layoutY="0.0" stroke="$x1" strokeType="INSIDE" strokeWidth="0.7" width="122.226318359375" />
-        <Text fill="#ba99ff" layoutX="44.0" layoutY="22.0" scaleX="3.0143396394437723" scaleY="2.662423999340135" stroke="BLACK" strokeType="CENTERED" strokeWidth="0.2" text="Library">
+        <Rectangle arcHeight="0.0" arcWidth="43.0" fill="$x2" height="57.00000762939453" layoutX="433.0" layoutY="0.0" stroke="$x1" strokeType="INSIDE" strokeWidth="0.7" width="201.0" />
+        <Text fill="#ba99ff" layoutX="90.0" layoutY="36.0" scaleX="3.0143396394437723" scaleY="2.662423999340135" stroke="BLACK" strokeType="CENTERED" strokeWidth="0.2" text="Library">
           <font>
             <Font name="Arial" size="12.0" fx:id="x3" />
           </font>
@@ -33,13 +33,13 @@
             <Color blue="1.000" green="0.600" red="0.729" fx:id="x4" />
           </fill>
         </Text>
-        <Text fill="$x4" font="$x3" fontSmoothingType="LCD" layoutX="289.0" layoutY="22.0" scaleX="2.83752566900751" scaleY="2.204093768736341" stroke="BLACK" strokeType="CENTERED" strokeWidth="0.2" text="About" />
-        <Text fill="$x4" font="$x3" fontSmoothingType="LCD" layoutX="162.0" layoutY="22.0" scaleX="2.44994177299606" scaleY="2.662423999340135" stroke="BLACK" strokeType="CENTERED" strokeWidth="0.2" text="Queues" />
+        <Text fill="$x4" font="$x3" fontSmoothingType="LCD" layoutX="518.0" layoutY="32.0" scaleX="2.83752566900751" scaleY="2.204093768736341" stroke="BLACK" strokeType="CENTERED" strokeWidth="0.2" text="About" />
+        <Text fill="$x4" font="$x3" fontSmoothingType="LCD" layoutX="296.0" layoutY="32.0" scaleX="2.44994177299606" scaleY="2.662423999340135" stroke="BLACK" strokeType="CENTERED" strokeWidth="0.2" text="Queues" />
       </children>
     </AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="165.0" prefWidth="634.0">
       <children>
-        <Rectangle arcHeight="0.0" arcWidth="43.0" height="36.0" layoutX="75.0" layoutY="14.0" stroke="#003d99" strokeType="INSIDE" width="461.0">
+        <Rectangle arcHeight="0.0" arcWidth="43.0" height="36.0" layoutX="75.0" layoutY="11.0" stroke="#003d99" strokeType="INSIDE" width="461.0">
           <fill>
             <Color blue="0.992" green="0.800" red="1.000" fx:id="x5" />
           </fill>
@@ -113,8 +113,8 @@
           </fill>
         </Circle>
         <Circle fill="$x8" layoutX="441.0" layoutY="81.0" opacity="1.0" radius="23.802734375" stroke="BLACK" strokeType="INSIDE" />
-        <Text layoutX="113.0" layoutY="87.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Shuffle" />
-        <Text layoutX="422.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Repeat" />
+        <Text layoutX="112.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Shuffle" />
+        <Text layoutX="423.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Repeat" />
       </children>
     </AnchorPane>
     <Line endX="100.0" startX="-100.0" />
